// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSCheckbox Checkbox (assistive text) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-form-element"
    >
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-checkbox"
        >
          <input
            id="checkbox-example-base-assistiveText"
            name="checkbox-example-base-assistiveText"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox__label"
            htmlFor="checkbox-example-base-assistiveText"
          >
            <span
              className="slds-checkbox_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Checkbox label
            </span>
            <span
              className="slds-assistive-text"
            >
              This is my checkbox.
							There are many like it, but this one is mine.
							My checkbox is my best friend.
							It is my life.
							I must master it as I must master my life.
							Without me, my checkbox is useless. Without my checkbox, I am useless.
							I must make my checkbox true.
							I must make it truer than my radio button who is trying to... 
            </span>
          </label>
        </span>
      </div>
    </div>
    <div
      className="slds-box slds-text-longform slds-m-top_large"
    >
      <p>
        This example has assistive text. In Safari on Mac you can turn assistive text on by using the keyboard combination:
        <strong>
          Command + F5
        </strong>
        .
      </p>
      <p>
        Once you have enabled it, use your tab key to focus on the checkbox input, and the system should read you what is supplied to the checkbox as the 
        <code>
          assistiveText
        </code>
        property.
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox (checked) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <div
      className="slds-form-element__control"
    >
      <span
        className="slds-checkbox"
      >
        <input
          checked={true}
          id="checkbox-example-base-checked"
          name="checkbox-example-base-checked"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="slds-checkbox__label"
          htmlFor="checkbox-example-base-checked"
        >
          <span
            className="slds-checkbox_faux"
          />
          <span
            className="slds-form-element__label"
          >
            Checkbox label
          </span>
        </label>
      </span>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox (default, indeterminate, required, disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <input
              id="checkbox-example"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-example"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Default
              </span>
              <span
                className="slds-assistive-text"
              >
                Default
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <input
              id="checkbox-example-indeterminate"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-example-indeterminate"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Indeterminate
              </span>
              <span
                className="slds-assistive-text"
              >
                Indeterminate
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element is-required"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <abbr
              className="slds-required"
              title="required"
            >
              *
            </abbr>
            <input
              id="checkbox-example-required"
              onChange={[Function]}
              required={true}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-example-required"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Required
              </span>
              <span
                className="slds-assistive-text"
              >
                Indeterminate
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <input
              disabled={true}
              id="checkbox-example-disabled"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-example-disabled"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Disabled
              </span>
              <span
                className="slds-assistive-text"
              >
                Disabled
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox (indeterminate) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Indeterminate
    </button>
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Check
    </button>
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Uncheck
    </button>
    <p>
      <strong>
        Current State:
      </strong>
       
      Indeterminate
    </p>
    <div
      className="slds-form-element"
    >
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-checkbox"
        >
          <input
            checked={true}
            id="checkbox-example-standard-indeterminate"
            name="checkbox-example-standard-indeterminate"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox__label"
            htmlFor="checkbox-example-standard-indeterminate"
          >
            <span
              className="slds-checkbox_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Checkbox label
            </span>
            <span
              className="slds-assistive-text"
            >
              Checkbox (indeterminate)
            </span>
          </label>
        </span>
      </div>
    </div>
    <div
      className="slds-box slds-text-longform slds-m-top_large"
    >
      <p>
        This example has an 
        <em>
          indeterminate
        </em>
         checkbox.
      </p>
      <p>
        It is set by providing the 
        <code>
          indeterminate
        </code>
         prop as
         
        <code>
          <strong>
            true
          </strong>
        </code>
        .
      </p>
      <p>
        Once it is clicked, there is no way to make it go 
        <em>
          back
        </em>
         to the indeterminate state,
         
        <a
          href="https://developer.mozilla.org/en-US/docs/Web/CSS/:indeterminate#Checkbox_radio_button"
        >
          it must be done programatically, through JavaScript
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox Toggle (assistive text) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-form-element"
    >
      <label
        className="slds-checkbox_toggle slds-grid"
        htmlFor="checkbox-example-base-assistiveText"
      >
        <span
          className="slds-form-element__label slds-m-bottom_none"
        >
          Checkbox label
        </span>
        <span
          className="slds-assistive-text"
        >
          This is my checkbox.
							There are many like it, but this one is mine.
							My checkbox is my best friend.
							It is my life.
							I must master it as I must master my life.
							Without me, my checkbox is useless. Without my checkbox, I am useless.
							I must make my checkbox true.
							I must make it truer than my radio button who is trying to... 
        </span>
        <input
          aria-describedby="checkbox-example-base-assistiveText-desc"
          id="checkbox-example-base-assistiveText"
          name="checkbox-example-base-assistiveText"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          aria-live="assertive"
          className="slds-checkbox_faux_container"
          id="checkbox-example-base-assistiveText-desc"
        >
          <span
            className="slds-checkbox_faux"
          />
          <span
            className="slds-checkbox_on"
          >
            Enabled
          </span>
          <span
            className="slds-checkbox_off"
          >
            Disabled
          </span>
        </span>
      </label>
    </div>
    <div
      className="slds-box slds-text-longform slds-m-top_large"
    >
      <p>
        This example has assistive text. In Safari on Mac you can turn assistive text on by using the keyboard combination:
        <strong>
          Command + F5
        </strong>
        .
      </p>
      <p>
        Once you have enabled it, use your tab key to focus on the checkbox input, and the system should read you what is supplied to the checkbox as the 
        <code>
          assistiveText
        </code>
        property.
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox Toggle (checked) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-checkbox_toggle slds-grid"
      htmlFor="checkbox-example-toggle-checked"
    >
      <span
        className="slds-form-element__label slds-m-bottom_none"
      >
        Checkbox label
      </span>
      <input
        aria-describedby="checkbox-example-toggle-checked-desc"
        checked={true}
        id="checkbox-example-toggle-checked"
        name="checkbox-example-toggle-checked"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        aria-live="assertive"
        className="slds-checkbox_faux_container"
        id="checkbox-example-toggle-checked-desc"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-checkbox_on"
        >
          Enabled
        </span>
        <span
          className="slds-checkbox_off"
        >
          Disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox Toggle (disabled) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-checkbox_toggle slds-grid"
      htmlFor="checkbox-example-toggle-disabled"
    >
      <span
        className="slds-form-element__label slds-m-bottom_none"
      >
        Checkbox Toggle label
      </span>
      <input
        aria-describedby="checkbox-example-toggle-disabled-desc"
        disabled={true}
        id="checkbox-example-toggle-disabled"
        name="checkbox-example-toggle-disabled"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        aria-live="assertive"
        className="slds-checkbox_faux_container"
        id="checkbox-example-toggle-disabled-desc"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-checkbox_on"
        >
          Enabled
        </span>
        <span
          className="slds-checkbox_off"
        >
          Disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox Toggle (required) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element is-required"
  >
    <label
      className="slds-checkbox_toggle slds-grid"
      htmlFor="checkbox-example-toggle-required"
    >
      <abbr
        className="slds-required"
        title="required"
      >
        *
      </abbr>
      <span
        className="slds-form-element__label slds-m-bottom_none"
      >
        Checkbox Toggle label
      </span>
      <input
        aria-describedby="checkbox-example-toggle-required-desc"
        id="checkbox-example-toggle-required"
        name="checkbox-example-toggle-required"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="checkbox"
      />
      <span
        aria-live="assertive"
        className="slds-checkbox_faux_container"
        id="checkbox-example-toggle-required-desc"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-checkbox_on"
        >
          Enabled
        </span>
        <span
          className="slds-checkbox_off"
        >
          Disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox Toggle (with error) 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element slds-has-error"
  >
    <label
      className="slds-checkbox_toggle slds-grid"
      htmlFor="checkbox-example-toggle-error"
    >
      <span
        className="slds-form-element__label slds-m-bottom_none"
      >
        Checkbox Toggle label
      </span>
      <input
        aria-describedby="checkbox-example-toggle-error-desc checkbox-example-toggle-error-error-text"
        id="checkbox-example-toggle-error"
        name="checkbox-example-toggle-error"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        aria-live="assertive"
        className="slds-checkbox_faux_container"
        id="checkbox-example-toggle-error-desc"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-checkbox_on"
        >
          Enabled
        </span>
        <span
          className="slds-checkbox_off"
        >
          Disabled
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__help"
      id="checkbox-example-toggle-error-error-text"
    >
      This field has an error.
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Checkbox Toggle 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-checkbox_toggle slds-grid"
      htmlFor="checkbox-example-toggle"
    >
      <span
        className="slds-form-element__label slds-m-bottom_none"
      >
        Checkbox Toggle label
      </span>
      <input
        aria-describedby="checkbox-example-toggle-desc"
        id="checkbox-example-toggle"
        name="checkbox-example-toggle"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        aria-live="assertive"
        className="slds-checkbox_faux_container"
        id="checkbox-example-toggle-desc"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-checkbox_on"
        >
          Enabled
        </span>
        <span
          className="slds-checkbox_off"
        >
          Disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Doc site Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element slds-has-error"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <input
              aria-describedby="checkbox-error-example-error-text"
              id="checkbox-error-example"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-error-example"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Checkbox label
              </span>
              <span
                className="slds-assistive-text"
              >
                Error state
              </span>
            </label>
          </span>
        </div>
        <div
          className="slds-form-element__help"
          id="checkbox-error-example-error-text"
        >
          This field is required
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <input
              id="checkbox-indeterminate-example"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-indeterminate-example"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Indeterminate
              </span>
              <span
                className="slds-assistive-text"
              >
                Indeterminate
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element is-required"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <abbr
              className="slds-required"
              title="required"
            >
              *
            </abbr>
            <input
              id="checkbox-indeterminate-required-example"
              onChange={[Function]}
              required={true}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-indeterminate-required-example"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Required
              </span>
              <span
                className="slds-assistive-text"
              >
                Indeterminate
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <div
          className="slds-form-element__control"
        >
          <span
            className="slds-checkbox"
          >
            <input
              disabled={true}
              id="checkbox-disabled-example"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="slds-checkbox__label"
              htmlFor="checkbox-disabled-example"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-form-element__label"
              >
                Disabled
              </span>
              <span
                className="slds-assistive-text"
              >
                Disabled
              </span>
            </label>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Doc site Snapshot Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    >
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                id="checkbox-base-example"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element slds-has-error"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                aria-describedby="checkbox-base-example--error-error-text"
                id="checkbox-base-example--error"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--error"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox
                </span>
              </label>
            </span>
          </div>
          <div
            className="slds-form-element__help"
            id="checkbox-base-example--error-error-text"
          >
            This field has an error
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                disabled={true}
                id="checkbox-base-example--disabled"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--disabled"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox (disabled)
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element is-required"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <abbr
                className="slds-required"
                title="required"
              >
                *
              </abbr>
              <input
                id="checkbox-base-example--required"
                onChange={[Function]}
                required={true}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--required"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox (required)
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    >
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                id="checkbox-base-example--assistive-text"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--assistive-text"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-assistive-text"
                >
                  Checkbox (with assistive text)
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                checked={true}
                id="checkbox-base-example--checked"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--checked"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox (checked)
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                checked={true}
                disabled={true}
                id="checkbox-base-example--checked-disabled"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--checked-disabled"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox (checked + disabled)
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                id="checkbox-base-example--indeterminate"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-base-example--indeterminate"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Checkbox (indeterminate)
                </span>
              </label>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Doc site Snapshot Toggle 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    >
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle
            </span>
            <input
              aria-describedby="checkbox-toggle-example-desc"
              id="checkbox-toggle-example"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element slds-has-error"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--error"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle
            </span>
            <input
              aria-describedby="checkbox-toggle-example--error-desc checkbox-toggle-example--error-error-text"
              id="checkbox-toggle-example--error"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--error-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
          <div
            className="slds-form-element__help"
            id="checkbox-toggle-example--error-error-text"
          >
            This field has an error
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--disabled"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (disabled)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--disabled-desc"
              disabled={true}
              id="checkbox-toggle-example--disabled"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--disabled-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element is-required"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--required"
          >
            <abbr
              className="slds-required"
              title="required"
            >
              *
            </abbr>
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (required)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--required-desc"
              id="checkbox-toggle-example--required"
              onChange={[Function]}
              required={true}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--required-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    >
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--assitive-text"
          >
            <span
              className="slds-assistive-text"
            >
              Toggle (with assistive text)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--assitive-text-desc"
              id="checkbox-toggle-example--assitive-text"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--assitive-text-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--checked"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (checked)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--checked-desc"
              checked={true}
              id="checkbox-toggle-example--checked"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--checked-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--checked-disabled"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (checked + disabled)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--checked-disabled-desc"
              checked={true}
              disabled={true}
              id="checkbox-toggle-example--checked-disabled"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--checked-disabled-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Doc site Toggle 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <div
      className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    >
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle
            </span>
            <input
              aria-describedby="checkbox-toggle-example-desc"
              id="checkbox-toggle-example"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element slds-has-error"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--error"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle
            </span>
            <input
              aria-describedby="checkbox-toggle-example--error-desc checkbox-toggle-example--error-error-text"
              id="checkbox-toggle-example--error"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--error-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
          <div
            className="slds-form-element__help"
            id="checkbox-toggle-example--error-error-text"
          >
            This field has an error
          </div>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--disabled"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (disabled)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--disabled-desc"
              disabled={true}
              id="checkbox-toggle-example--disabled"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--disabled-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element is-required"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--required"
          >
            <abbr
              className="slds-required"
              title="required"
            >
              *
            </abbr>
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (required)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--required-desc"
              id="checkbox-toggle-example--required"
              onChange={[Function]}
              required={true}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--required-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
    >
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--assitive-text"
          >
            <span
              className="slds-assistive-text"
            >
              Toggle (with assistive text)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--assitive-text-desc"
              id="checkbox-toggle-example--assitive-text"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--assitive-text-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--checked"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (checked)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--checked-desc"
              checked={true}
              id="checkbox-toggle-example--checked"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--checked-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        className="slds-col_padded"
      >
        <div
          className="slds-form-element"
        >
          <label
            className="slds-checkbox_toggle slds-grid"
            htmlFor="checkbox-toggle-example--checked-disabled"
          >
            <span
              className="slds-form-element__label slds-m-bottom_none"
            >
              Toggle (checked + disabled)
            </span>
            <input
              aria-describedby="checkbox-toggle-example--checked-disabled-desc"
              checked={true}
              disabled={true}
              id="checkbox-toggle-example--checked-disabled"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              aria-live="assertive"
              className="slds-checkbox_faux_container"
              id="checkbox-toggle-example--checked-disabled-desc"
            >
              <span
                className="slds-checkbox_faux"
              />
              <span
                className="slds-checkbox_on"
              >
                Enabled
              </span>
              <span
                className="slds-checkbox_off"
              >
                Disabled
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCheckbox Grouped with Tristate 1`] = `
<div
  className="slds-p-around_medium"
>
  <fieldset>
    <legend
      className="slds-p-bottom_xx-small"
    >
      Grouped with Tristate
    </legend>
    <div
      className="slds-form-element"
    >
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-checkbox"
        >
          <input
            aria-checked="mixed"
            aria-controls="checkbox-mayonnaise checkbox-mustard checkbox-oil checkbox-vinegar"
            id="checkbox-example-all-condiments"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="slds-checkbox__label"
            htmlFor="checkbox-example-all-condiments"
          >
            <span
              className="slds-checkbox_faux"
            />
            <span
              className="slds-form-element__label"
            >
              All Condiments
            </span>
            <span
              className="slds-assistive-text"
            >
              All Condiments
            </span>
          </label>
        </span>
      </div>
    </div>
    <ul
      className="slds-p-left_large slds-p-top_xx-small"
    >
      <li>
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                checked={true}
                id="checkbox-mayonnaise"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-mayonnaise"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Mayonnaise
                </span>
                <span
                  className="slds-assistive-text"
                >
                  Mayonnaise
                </span>
              </label>
            </span>
          </div>
        </div>
      </li>
      <li>
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                checked={false}
                id="checkbox-mustard"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-mustard"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Mustard
                </span>
                <span
                  className="slds-assistive-text"
                >
                  Mustard
                </span>
              </label>
            </span>
          </div>
        </div>
      </li>
      <li>
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                checked={true}
                id="checkbox-oil"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-oil"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Oil
                </span>
                <span
                  className="slds-assistive-text"
                >
                  Oil
                </span>
              </label>
            </span>
          </div>
        </div>
      </li>
      <li>
        <div
          className="slds-form-element"
        >
          <div
            className="slds-form-element__control"
          >
            <span
              className="slds-checkbox"
            >
              <input
                checked={false}
                id="checkbox-vinegar"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="slds-checkbox__label"
                htmlFor="checkbox-vinegar"
              >
                <span
                  className="slds-checkbox_faux"
                />
                <span
                  className="slds-form-element__label"
                >
                  Vinegar
                </span>
                <span
                  className="slds-assistive-text"
                >
                  Vinegar
                </span>
              </label>
            </span>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;
